--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # Maps to service it-dce-poc-documentintel-useast
-DATA_EXTRACT_SERVICE_URL=https://it-dce-poc-documentintel-useast.cognitiveservices.azure.com/documentintelligence/documentModels/prebuilt-layout:analyze?api-version=2023-10-31-preview&features=keyValuePairs
-DATA_EXTRACT_API_KEY=94f28060319f46ef9eb5a31b4e6b2667
+DATA_EXTRACT_SERVICE_URL=https://intel-useast.cognitiveservices.azure.com/documentintelligence/documentModels/prebuilt-layout:analyze?api-version=2023-10-31-preview&features=keyValuePairs
+DATA_EXTRACT_API_KEY=
 		
 DATA_EXTRACT_ROOT_FOLDER=C:\\Temp\\platform\\files
 DATA_EXTRACT_SEPARATOR=\\
